--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-     "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.2",
     "cors": "^2.8.5",
+    "cros": "^1.0.1",
     "nodemon": "^3.1.3",
     "typescript": "^5.4.5"
   }
