--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "src/index.ts"
+    "dev": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +12,7 @@
   "devDependencies": {
     "@prisma/client": "^5.15.0",
     "express": "^4.19.2",
-    "nodemon": "^3.1.3",
+
     "prisma": "^5.15.0",
     "ts-node": "^10.9.2"
   },
@@ -22,6 +22,7 @@
     "@types/node": "^20.14.2",
     "cors": "^2.8.5",
     "cros": "^1.0.1",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "nodemon": "^3.1.3"
   }
 }
